--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.19.0",
     "clsx": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "react-icons": "^3.9.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.5",
     "typescript": "~3.7.2"
   },
   "scripts": {
