added unit testing. TDD approach. added kanbanchi link

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^10.2.0",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -14,13 +14,19 @@
     "clsx": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
     "react-icons": "^3.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.0.5",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.5",
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "prettier": "^2.0.5",
     "autoprefixer": "^9.8.0",
     "postcss-cli": "^7.1.1",
     "tailwindcss": "^1.4.6"
@@ -30,8 +36,33 @@
     "watch:css": "postcss src/assets/css/main.css -o src/index.css -w",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "yarn prettier:format && react-scripts test",
+    "test:cov": "yarn prettier:format && react-scripts test --coverage",
+    "prettier:check": "prettier --list-different src/**/*.js",
+    "prettier:format": "prettier --write src/**/*.js",
     "eject": "react-scripts eject"
+  },
+  "collectCoverage": true,
+  "jest": {
+    "collectCoverageFrom": [
+      "!src/postcss.config.js",
+      "!src/common/util/*",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "**/*.{jsx,tsx}"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ]
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "outputDirectory": ".",
+    "outputName": "junit.xml",
+    "classNameTemplate": "{classname} - {title}",
+    "ancestorSeparator": " > ",
+    "usePathForSuiteName": "true"
   },
   "eslintConfig": {
     "extends": "react-app"
