--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,11 @@
     "kitchen"
   ],
   "dependencies": {
-    "bookshelf": "0.9.2",
     "bcrypt": "^3.0.6",
+    "bookshelf": "0.9.2",
     "colors": "^1.4.0",
     "config": "^3.2.3",
+    "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.2",
     "passport": "^0.4.0",
