--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -26,9 +27,9 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "prettier": "^2.0.5",
     "autoprefixer": "^9.8.0",
     "postcss-cli": "^7.1.1",
+    "prettier": "^2.0.5",
     "tailwindcss": "^1.4.6"
   },
   "scripts": {
