--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "kitchen"
   ],
   "dependencies": {
+    "base64-min": "^2.0.0",
     "bookshelf": "0.9.2",
     "colors": "^1.4.0",
     "config": "^3.2.3",
