--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "author": "pramod",
   "license": "MIT",
   "engines": {
-    "node": "12.15.0",
-    "npm": "6.13.4"
+    "node": "^12.15.0",
+    "npm": "^6.13.4"
   },
   "scripts": {
     "start": "node ./dist/index.js",
