--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/history": "^4.7.8",
     "axios": "^0.19.0",
+    "clsx": "^1.1.0",
     "date-fns": "next",
+    "gsap": "^3.2.0",
     "material-ui-pickers": "latest",
     "moment": "2.24.0",
     "notistack": "^0.8.9",
