found a way to connect with heroku for dev. proxy in package

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy":"https://justbored.herokuapp.com",
   "browserslist": {
     "production": [
       ">0.2%",
