--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
     "@date-io/date-fns": "latest",
     "@date-io/moment": "1.1.0",
     "@material-ui/core": "^4.2.1",
@@ -66,7 +68,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy":"https://justbored.herokuapp.com",
+  "proxy": "https://justbored.herokuapp.com",
   "browserslist": {
     "production": [
       ">0.2%",
