--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
-    "@ckeditor/ckeditor5-editor-classic": "^24.0.0",
-    "@ckeditor/ckeditor5-essentials": "^24.0.0",
-    "@ckeditor/ckeditor5-markdown-gfm": "^24.0.0",
-    "@ckeditor/ckeditor5-react": "^3.0.0",
     "@date-io/date-fns": "latest",
     "@date-io/moment": "1.1.0",
     "@material-ui/core": "^4.2.1",
@@ -18,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/history": "^4.7.8",
     "axios": "^0.19.0",
+    "ckeditor4-react": "^1.3.0",
     "clsx": "^1.1.0",
     "date-fns": "next",
     "gsap": "^3.2.0",
