Update and rename default_json.yml to create_env.yml

--- a/.github/workflows/create_env.yml
+++ b/.github/workflows/create_env.yml
@@ -1,8 +1,11 @@
 # Create a default.json environment file under backend/config/ folder
 # Add Environment Variables from Repository Secrets
 name: Create env file
-on: push
-
+on: 
+  push:
+    branches:
+      - dev
+   
 jobs:
   run:
     name: Create env file
