--- a/.github/workflows/remove_env.yml
+++ b/.github/workflows/remove_env.yml
@@ -12,17 +12,7 @@ jobs:
     name: Remove env files
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-
       - name: Remove file
-        run: |
-          echo -n "" > backend/config/default.json
-          rm -rf backend/config/.
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
+        uses: JesseTG/rm@v1.0.2
         with:
-          author_name: Pramod AJ
-          author_email: avj2352@gmail.com
-          message: 'Removing Environment file'
-
+          path: /backend/config/*.json
