--- a/.github/workflows/remove_env.yml
+++ b/.github/workflows/remove_env.yml
@@ -15,4 +15,8 @@ jobs:
       - name: Remove file
         uses: JesseTG/rm@v1.0.2
         with:
-          path: /backend/config/*.json
+          path: /backend/config/default.json
+      - name: Remove file
+        uses: JesseTG/rm@v1.0.2
+        with:
+          path: /backend/config/development.json
