--- a/.github/workflows/remove_env.yml
+++ b/.github/workflows/remove_env.yml
@@ -24,5 +24,5 @@ jobs:
         with:
           author_name: Pramod AJ
           author_email: avj2352@gmail.com
-          message: 'Adding Environment file'
+          message: 'Removing Environment files'
           add: '*.json'
