--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.1.0",
     "date-fns": "next",
     "gsap": "^3.2.0",
+    "lodash": "^4.17.21",
     "material-ui-pickers": "latest",
     "moment": "2.24.0",
     "notistack": "^0.8.9",
